# Sportsday-Scoreboardv2

./: .gitignore  Cargo.toml  Dockerfile  config.yaml  package.json
.github/workflows/: ci.yml
assets/: style.css
docs/: configuration.md
nix/modules/: devshell.nix
scripts/: build.ts
src/: main.rs  prometheus.rs  templates.rs  utils.rs  websocket.rs
src/configurator/: build.rs  parser.rs  run.rs
src/db/: events.rs  forms.rs  mod.rs  scores.rs  user_sessions.rs  users.rs  years.rs
src/db_configurator/: build.rs  mod.rs  parser.rs  run.rs
src/js/: index.ts
src/js/controllers/: score_manager_controller.ts  score_set_controller.ts  score_update_controller.ts  websocket_controller.ts
src/middleware/: authentication.rs
src/routes/: index.rs  mod.rs  oauth.rs  results.rs  scoreboard.rs  set_scores.rs  ws.rs
templates/: index.html  scoreboard.html  set_scores.html
templates/layouts/: index.html
templates/partials/: scoreboard.html
