[package]
authors = ["Sean Outra <me@sean.cyou>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "sportsday-scoreboard-v2"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
askama = "0.14.0"
async-sqlite = "0.5.3"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
