[package]
authors = ["Sean Outra <me@sean.cyou>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "sportsday-scoreboard-v2"
description = "A simple Rust project using Nix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
actix-web = "4.11.0"
reqwest = { version = "0.12.24", default-features = false, features = [
    "rustls-tls",
] }
askama = "0.14.0"
async-sqlite = "0.5.3"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.28"
serde_yml = "0.0.12"
actix-files = "0.6.8"
serde_json = "1.0.145"
